Refactor http requests, Add UserDTO class, Add request patch changePassword, Add error status in requests
